assignment3/app-1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app1
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
