assignment3/app-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: app
  labels:
    app: app1

spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          service:
            name: service-app1
            port:
              number: 80
